# rush_id_tauri

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: AiStudioTab.tsx  App.tsx  GeminiTab.tsx  MultiClient.tsx  OtherClient.tsx  OtherSlotCard.tsx  PassportClient.tsx  PolaroidClient.tsx  PolaroidSlotCard.tsx  SingleClient.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ColorPicker.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  LicenseModal.tsx  LogsPanel.tsx  PatchNotesModal.tsx  PrintReminderModal.tsx  RetouchButton.tsx  RotationSidebar.tsx  SettingsModal.tsx  Tooltip.tsx  WhatsNewModal.tsx
src/components/CompanionWidget/: CompanionWidget.css  CompanionWidget.tsx  GreetingOverlay.css  GreetingOverlay.tsx  browseStore.ts  dialogue.ts  effieInvoke.ts  effieSettings.ts  index.ts  moodStore.ts  types.ts
src/components/RetouchWindow/: RetouchCanvas.tsx  RetouchToolbar.tsx  RetouchWindow.tsx  index.ts  useRetouchCanvas.ts
src/hooks/: useTooltipPosition.ts
src/lib/: cropImage.ts  loadCropperImage.ts  logColor.ts  patchNotes.ts  readFileAsDataUrl.ts  savePath.ts  tooltips.ts  utils.ts
src/lib/hooks/: useApiLogs.ts  useCropperWheel.ts  useIsMounted.ts  useKeyUsed.ts  useTauriDragDrop.ts  useTemplates.ts
src/types/: index.ts
