[package]
name = "rush_id_tauri"
version = "1.19.3"
description = "Rush ID — Automated Image Processing & Printing"
authors = ["J3FF PRINTING SERVICES"]
edition = "2021"

[lib]
name = "rush_id_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "native-tls-vendored"] }
base64 = "0.22"
image = { version = "0.25", features = ["png"] }
svg2pdf = "0.13"
lopdf = "0.41"
